Add modal for games page

--- a/frontend/app/scss/base/_modal.scss
+++ b/frontend/app/scss/base/_modal.scss
@@ -26,6 +26,12 @@
         .show & {
             transform: scale(1);
         }
+
+        &.m-game_actions {
+            @include tablet-all() {
+                min-width: 768px;
+            }
+        }
     }
 
     &-title {
