--- a/app/src/main/resources/site/pages/components/modal.html
+++ b/app/src/main/resources/site/pages/components/modal.html
@@ -1,28 +1,84 @@
 <div data-th-remove="tag">
-    <div class="modal modal-forgot-password">
-        <div class="modal-dialog">
+    <div class="modal js_modal">
+        <div class="modal-dialog m-game_actions">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">
-                        Забыли пароль?
+                        Добавить игрока
                     </h4>
-                    <a href="" class="modal-action modal-action-login js_call-login"
-                        data-logintype="js_login-form">Войти</a>
                     <span class="icon-delete modal-close js_modal-close"></span>
                 </div>
                 <div class="modal-body">
-                    <form action="#" class="reset-form js_validate">
-                        <div class="form-group">
-                            <label for="email-forgot-input" class="label">ЭЛЕКТРОННАЯ ПОЧТА</label>
-                            <input name="email" type="email" class="input-text" id="email-forgot-input" required />
-                        </div>
-                        <div class="form-group form-group-error is-invalid hidden">
-                            <span></span>
+                    <div class="form-group" data-th-unless="${user and user.content.displayName}">
+                        <input class="js_get-user-data" name="username" placeholder="Имя" required>
+                    </div>
+                    <div class="form-group" data-th-unless="${user and user.content.data.email}">
+                        <input class="js_get-user-data" name="email" placeholder="Электронная почта" required>
+                    </div>
+                    <div class="form-group" data-th-unless="${user and user.content.data.phone}">
+                        <input class="js_get-user-data" name="phone" placeholder="Номер телефона" required>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button data-step="init" class="kosticonnect-button primary">ЗАПИСАТЬ НА
+                        ИГРУ</button>
+                </div>
+
+                
+                <!-- <div class="modal-header">
+                    <h4 class="modal-title">
+                        Список Игроков
+                    </h4>
+                    <span class="icon-delete modal-close js_modal-close"></span>
+                </div>
+                <div class="modal-body">
+                    <div class="table-wrap">
+                        <div class="table-header_row">
+                            <div class="table-header_cell k_games-table-name">
+                                <span class="label">Им'я</span>
+                            </div>
+
+                            <div class="table-header_cell">
+                                <span class="label">номер телефона</span>
+                            </div>
+
+                            <div class="table-header_cell">
+                                <span class="label">email</span>
+                            </div>
+
+                            <div class="table-header_cell">
+                                <span class="label">Действия</span>
+                            </div>
                         </div>
 
-                        <button class="modal-btn modal-btn-reset">ОТПРАВИТЬ</button>
-                    </form>
+                        <div class="table-body_row">
+                            <div class="table-body_cell k_games-table-name">
+                                <span class="value" >
+                                    Иван
+                                </span>
+                            </div>
+
+                            <div class="table-body_cell">
+                                <span class="value">
+                                    +380502334840
+                                </span>
+                            </div>
+
+                            <div class="table-body_cell">
+                                <span class="value">
+                                    fdkdfgkjdflgdj@gmail.com
+                                </span>
+                            </div>
+                            <div class="table-body_cell k_games-table-remove_btn">
+                                <button class="button">Удалить</button>
+                            </div>
+                        </div>>
+                    </div>
                 </div>
+                <div class="modal-footer">
+                </div> -->
+
+
             </div>
         </div>
     </div>
