Update main color

--- a/frontend/app/scss/utilities/_variables.scss
+++ b/frontend/app/scss/utilities/_variables.scss
@@ -40,7 +40,7 @@ $color-primary40: #43a047;
 //kosticonnect
 $kosticonnect-primary1: #e2211c;
 $kosticonnect-primary2: #11090f;
-$kosticonnect-primary3: #2c1a46;
+$kosticonnect-primary3: #191818;
 
 ///
 ///Social colors
