--- a/frontend/app/scss/utilities/_variables.scss
+++ b/frontend/app/scss/utilities/_variables.scss
@@ -41,6 +41,7 @@ $color-primary40: #43a047;
 $kosticonnect-primary1: #e2211c;
 $kosticonnect-primary2: #11090f;
 $kosticonnect-primary3: #191818;
+$kosticonnect-primary4: #1d1a34;
 
 ///
 ///Social colors
