--- a/frontend/app/scss/pages/_kosticonnect.scss
+++ b/frontend/app/scss/pages/_kosticonnect.scss
@@ -232,7 +232,7 @@
 
 .hero_banner {
     position: relative;
-    padding-bottom: 25px;
+    // padding-bottom: 25px;
     background-color: $kosticonnect-primary3;
     overflow: hidden;
 
