--- a/app/src/main/resources/services/checkout/templates/checkout.html
+++ b/app/src/main/resources/services/checkout/templates/checkout.html
@@ -82,7 +82,7 @@
                         <div class="summary-discount js_summary-discount">
                             <span class="label">Скидка</span>
                             <span class="value">UAH
-                                <span data-th-text="${cart.price.discount.discount}"></span></span>
+                                <span data-th-text="${cart.price.discount.discount.total}"></span></span>
                         </div>
                         <div class="summary-total js_summary-total">
                             <span class="label">Всего</span>
