--- a/app/src/main/resources/services/checkout/templates/checkout.html
+++ b/app/src/main/resources/services/checkout/templates/checkout.html
@@ -44,7 +44,7 @@
                                 </div>
                                 <div class="summary-product-qty">
                                     <span class="label">Количество:</span>
-                                    <span class="value" data-th-text="${product.amount}"></span>
+                                    <span class="value" data-th-text="${product.amountString}"></span>
                                 </div>
                                 <div class="summary-product-price" data-th-utext="${product.priceBlock}"
                                     data-th-classappend="${product.stock and product.itemSizeStock ? '' : 'hidden'}">
