--- a/app/src/main/resources/admin/orders/templates/ordersList.html
+++ b/app/src/main/resources/admin/orders/templates/ordersList.html
@@ -106,7 +106,7 @@
 
                         <div class="table-body_cell table-side_aligns">
                             <div class="value" data-th-each="product: ${item.items}">
-                                <span data-th-text="${product.amount + 'X '}"></span>
+                                <span data-th-text="${product.amountString + 'X '}"></span>
                                 <span data-th-text="${product.displayName}"></span>
                                 <span data-th-text="${product.itemSize != null ? ' ' + product.itemSize : ''}"></span>
                             </div>
