Kosticonnect 2022 first redesign

--- a/app/src/main/resources/site/pages/components/header/festivalHeader.html
+++ b/app/src/main/resources/site/pages/components/header/festivalHeader.html
@@ -1,11 +1,9 @@
-<header class="kosticonnect-header">
+<header class="b-meet_up-header">
     <div class="site_content">
-        <div class="kosticonnect-header_inner m-kostirpg">
-            <div class="kosticonnect-short_info">
-                <a data-th-href="${logoUrl}">
-                    <div class="kosticonnect-headline">
-                        <img data-th-src="${logo}" alt="kosticonnect " />
-                    </div>
+        <div class="b-meet_up-header_inner">
+            <div class="b-meet_up-short_info">
+                <a data-th-href="${logoUrl}" class="b-meet_up-headline">
+                    <img data-th-src="${logo}" alt="Kostyashky team " />
                 </a>
             </div>
             <div class="header-logo">
