--- a/frontend/app/scss/05-blocks/common/_b-promo_block.scss
+++ b/frontend/app/scss/05-blocks/common/_b-promo_block.scss
@@ -18,7 +18,7 @@
     }
 
     &.m-purple {
-        background-color: $kosticonnect-primary4;
+        background-color: $meet-up-primary2;
     }
 
     &-holder {
