--- a/frontend/app/scss/utilities/_variables.scss
+++ b/frontend/app/scss/utilities/_variables.scss
@@ -38,10 +38,22 @@ $color-primary39: #091e42;
 $color-primary40: #43a047;
 
 //kosticonnect
-$kosticonnect-primary1: #e2211c;
+$kosticonnect-primary1: #F07300;
 $kosticonnect-primary2: #11090f;
-$kosticonnect-primary3: #191818;
+$kosticonnect-primary3: #1A0C1D;
 $kosticonnect-primary4: #1d1a34;
+$kosticonnect-primary5: #3A2842;
+$kosticonnect-primary6: #FFB71B;
+$kosticonnect-primary7: #C30941;
+$kosticonnect-primary8: #960330;
+
+
+//meet up
+$meet-up-primary1: #191818;
+$meet-up-primary2: #1d1a34;
+$meet-up-primary3: #e2211c;
+$meet-up-primary4: #C30941;
+$meet-up-primary5: #960330;
 
 ///
 ///Social colors
