--- a/frontend/app/scss/main.scss
+++ b/frontend/app/scss/main.scss
@@ -57,6 +57,7 @@
 @import "pages/viewOrders";
 @import "pages/createArticle/all";
 @import "pages/kosticon2020";
+@import "pages/b-meet_up";
 @import "pages/kosticonnect";
 @import "pages/kosticonnect_games";
 @import "pages/myGamesStep1-2";
